# sophist

./: README.md  pyproject.toml
src/sophist/: cli.py
